[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/enemy-0.png" type="Texture" id=1]
[ext_resource path="res://actors/enemies/flash.shader" type="Shader" id=2]
[ext_resource path="res://actors/enemies/enemy-states-machine.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/jellyfish/jellyfish.gd" type="Script" id=4]
[ext_resource path="res://actors/enemies/jellyfish/states/shot-state.gd" type="Script" id=5]
[ext_resource path="res://actors/enemies/jellyfish/states/dead-state.gd" type="Script" id=6]
[ext_resource path="res://actors/enemies/jellyfish/states/grabbed-state.gd" type="Script" id=7]
[ext_resource path="res://actors/enemies/jellyfish/states/ready-state.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/yellow = Color( 0.941176, 0.909804, 0.458824, 1 )
shader_param/flash_white = 0.0
shader_param/flash_yellow = 0.0
shader_param/flash_invisible = 0.0

[sub_resource type="Animation" id=2]
resource_name = "floating"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "swim_up"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "grabbed"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shot"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 7 )

[node name="Jellyfish" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 163
script = ExtResource( 4 )
moving = "Static"
moving_speed = 50.0
suck_acceleration = 500.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/floating = SubResource( 2 )
anims/grabbed = SubResource( 3 )
anims/shot = SubResource( 4 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="ShotHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 50
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="ShotHitbox"]
shape = SubResource( 6 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 137
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 7 )

[node name="StatesMachine" type="Node2D" parent="."]
script = ExtResource( 3 )
states = [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
[connection signal="area_entered" from="ShotHitbox" to="." method="_on_ShotHitbox_area_entered"]
[connection signal="body_entered" from="ShotHitbox" to="." method="_on_ShotHitbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
